# Project-Graffiti-Soul

./: .gitignore  CMakeLists.txt  README.md  TESTING.md  kb.json  requirements.txt
docs/: EXTRACTION_GUIDE.md  QUICK_START.md  STRUCTURE.md  XBOX_SDK_REFERENCE.md  memory_map.md
include/: types.h
src/: main.cpp
tools/: ExtractDecompiledFunctions.py  patch.py
